--- a/index.html
+++ b/index.html
@@ -163,9 +163,11 @@
                 <div class="section-2__images-block-small">
                     <img src="./images/Secondary Photo Placeholder.png" alt="" class="section-2__images-block-small-img">
                     <img src="./images/Secondary Photo Placeholder (1).png" alt="" class="section-2__images-block-small-img">
-                    <div class="section-2__images-block-small-more">
-                        1025+
-                    </div>
+                    <a href="./tier.html" target="_blank">
+                        <div class="section-2__images-block-small-more">
+                            1025+
+                        </div>
+                    </a>
                 </div>
                 <p class="section-2__images-block-name">DSGN Animals</p>
                 <img src="./images/Artist Card.png" alt="" class="section-2__images-block-avatar">
