--- a/index.html
+++ b/index.html
@@ -198,7 +198,17 @@
                 <p class="section-2__images-block-name">Disco Machines</p>
                 <img src="./images/Artist Card (2).png" alt="" class="section-2__images-block-avatar">
             </div>
+        </div>
+    </div>
 
+    <div class="section-3">
+        <div class="section-3__top">
+            <div class="section-3__top-txt">
+                <h2 class="section-3__top-txt-title"></h2>
+                <p class="section-3__top-txt-descr"></p>
+            </div>
+
+            <button class="section-3__top-btn"></button>
         </div>
     </div>
 </body>
