--- a/index.html
+++ b/index.html
@@ -172,6 +172,34 @@
                 <p class="section-2__images-block-name">DSGN Animals</p>
                 <img src="./images/Artist Card.png" alt="" class="section-2__images-block-avatar">
             </div>
+<!-- BUTTON--------- -->
+            <div class="button-767px">
+                <input type="checkbox" id="MorePhotos" class="button-767px__input">
+                <label for="MorePhotos" class="button-767px__label">
+                    <div class="footer-button">
+                        Show More
+                    </div>
+                </label>
+
+                <div class="cards-767px">
+                    <div class="section-2__images-block">
+                        <img src="./images/Primary Photo Placeholder (1).png" alt="" class="section-2__images-block-main-img">
+                        <div class="section-2__images-block-small">
+                            <img src="./images/Primary Photo Placeholder (1).png" alt="" class="section-2__images-block-small-img">
+                            <img src="./images/Primary Photo Placeholder (1).png" alt="" class="section-2__images-block-small-img">
+                            <div class="section-2__images-block-small-more">
+                                1025+
+                            </div>
+                        </div>
+                        <p class="section-2__images-block-name">Magic Mushrooms</p>
+                        <img src="./images/Artist Card (1).png" alt="" class="section-2__images-block-avatar">
+                    </div>
+                </div>
+                <!-- BUTTON END -->
+            </div>
+
+
+
 
             <div class="section-2__images-block">
                 <img src="./images/Primary Photo Placeholder (1).png" alt="" class="section-2__images-block-main-img">
@@ -186,7 +214,7 @@
                 <img src="./images/Artist Card (1).png" alt="" class="section-2__images-block-avatar">
             </div>
 
-            <div class="section-2__images-block">
+            <div class="section-2__images-block-3">
                 <img src="./images/Primary Photo Placeholder (2).png" alt="" class="section-2__images-block-main-img">
                 <div class="section-2__images-block-small">
                     <img src="./images/Primary Photo Placeholder (2).png" alt="" class="section-2__images-block-small-img">
