--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                         <h1 class="header__info-block-left-title">Discover digital art & Collect NFTs</h1>
                         <p class="header__info-block-left-descr">NFT marketplace UI created with Anima for Figma. Collect, buy and sell art from more than 20k NFT artists.</p>
                         
+
+                        <!-- МОДАЛОЧКА ШО НА ТЕЛЕФОНІ НЕ РОБИТЬ------------------------------------- -->
                         <input type="checkbox" id="target" class="fullskrin__button-input">
                         <label for="target" class="fullskrin__button-label">
                             <button class="fullskrin__button-label-btn">
@@ -172,6 +174,7 @@
                 <p class="section-2__images-block-name">DSGN Animals</p>
                 <img src="./images/Artist Card.png" alt="" class="section-2__images-block-avatar">
             </div>
+
 <!-- BUTTON--------- -->
             <div class="button-767px">
                 <input type="checkbox" id="MorePhotos" class="button-767px__input">
@@ -236,7 +239,7 @@
                 <p class="section-3__top-txt-descr">Checkout Top Rated Creators on the NFT Marketplace</p>
             </div>
             <div class="section-3__top-btn">
-                <img src="./images/RocketLaunch.png" alt="">
+                <img src="./images/RocketLaunch.png" alt="" class="section-3__rocket-img">
                 View Rankings
             </div>
         </div>
@@ -421,5 +424,24 @@
             </div>
         </div>
     </div>
+
+    <!-- 
+    <div class="section-4">
+        <h2 class="section-4__title">Browse Categories</h2>
+        <div class="section-4__box">
+            <div class="section-4__box-1">
+
+                <div class="section-4__box-1-block">
+                    <div class="section-4__box-1-block-images">
+                        <img src="./images-4/PaintBrush.svg" alt="" class="section-4__box-1-block-icon">
+                    </div>
+                    <h4 class="section-4__box-1-block-name">Art</h4>
+                </div>
+            
+            </div>
+            <div class="section-4__box-2"></div>
+        </div>
+    </div>
+-->
 </body>
 </html>
