adaptive + new section 4

--- a/index.html
+++ b/index.html
@@ -425,23 +425,79 @@
         </div>
     </div>
 
-    <!-- 
+
+    
     <div class="section-4">
         <h2 class="section-4__title">Browse Categories</h2>
         <div class="section-4__box">
-            <div class="section-4__box-1">
-
                 <div class="section-4__box-1-block">
                     <div class="section-4__box-1-block-images">
+                        <img src="./images-4/first.png" alt="" class="section-4__block-background">
                         <img src="./images-4/PaintBrush.svg" alt="" class="section-4__box-1-block-icon">
                     </div>
                     <h4 class="section-4__box-1-block-name">Art</h4>
                 </div>
-            
-            </div>
-            <div class="section-4__box-2"></div>
+
+                <div class="section-4__box-1-block">
+                    <div class="section-4__box-1-block-images">
+                        <img src="./images-4/second.png" alt="" class="section-4__block-background">
+                        <img src="./images-4/Swatches.svg" alt="" class="section-4__box-1-block-icon">
+                    </div>
+                    <h4 class="section-4__box-1-block-name">Collectibles</h4>
+                </div>
+
+                <div class="section-4__box-1-block">
+                    <div class="section-4__box-1-block-images">
+                        <img src="./images-4/third.png" alt="" class="section-4__block-background">
+                        <img src="./images-4/MusicNotes.svg" alt="" class="section-4__box-1-block-icon">
+                    </div>
+                    <h4 class="section-4__box-1-block-name">Music</h4>
+                </div>
+
+                <div class="section-4__box-1-block">
+                    <div class="section-4__box-1-block-images">
+                        <img src="./images-4/fourth.png" alt="" class="section-4__block-background">
+                        <img src="./images-4/Camera.svg" alt="" class="section-4__box-1-block-icon">
+                    </div>
+                    <h4 class="section-4__box-1-block-name">Photography</h4>
+                </div>
+
+
+                <div class="section-4__box-1-block">
+                    <div class="section-4__box-1-block-images">
+                        <img src="./images-4/fifth.png" alt="" class="section-4__block-background">
+                        <img src="./images-4/VideoCamera.svg" alt="" class="section-4__box-1-block-icon">
+                    </div>
+                    <h4 class="section-4__box-1-block-name">Video</h4>
+                </div>
+
+                <div class="section-4__box-1-block">
+                    <div class="section-4__box-1-block-images">
+                        <img src="./images-4/sixth.png" alt="" class="section-4__block-background">
+                        <img src="/images-4/MagicWand.svg" alt="" class="section-4__box-1-block-icon">
+                    </div>
+                    <h4 class="section-4__box-1-block-name">Utility</h4>
+                </div>
+
+                <div class="section-4__box-1-block">
+                    <div class="section-4__box-1-block-images">
+                        <img src="./images-4/seventh.png" alt="" class="section-4__block-background">
+                        <img src="./images-4/Basketball.svg" alt="" class="section-4__box-1-block-icon">
+                    </div>
+                    <h4 class="section-4__box-1-block-name">Sport</h4>
+                </div>
+
+                <div class="section-4__box-1-block">
+                    <div class="section-4__box-1-block-images">
+                        <img src="./images-4/eighth.png" alt="" class="section-4__block-background">
+                        <img src="./images-4/Planet.svg" alt="" class="section-4__box-1-block-icon">
+                    </div>
+                    <h4 class="section-4__box-1-block-name">Virtual Words</h4>
+                </div>
+
         </div>
     </div>
--->
+
+
 </body>
 </html>
