blank header adaptive

--- a/index.html
+++ b/index.html
@@ -129,10 +129,28 @@
                         </div>
                     </div>
 
-                    <button class="header__info-block-left-btn">
-                        <img src="./images/RocketLaunch.png" alt="" class="header__info-block-left-btn-icon">
-                        Get Started
-                    </button>
+                    <input type="checkbox" id="target-mob" class="fullskrin__button-input">
+                    <label for="target-mob" class="fullskrin__button-label">
+                        <button class="fullskrin__button-label-btn">
+                            <img src="./images/RocketLaunch.png" alt="" class="header__info-block-left-btn-icon">
+                            Get Started
+                        </button>
+                    </label>
+
+                    <div class="fullskrin__start">
+                        <h2 class="fullskrin__start__logo">NFT Marketplace</h2>
+                        <h2 class="fullskrin__start__title">For Gettin Started you have to Sign Up</h2>
+                        <input type="text" class="fullskrin__start__input" placeholder="Username or E-mail">
+                        <input type="text" class="fullskrin__start__input" placeholder="Password">
+                        <div class="fullskrin__start__btn">
+                            Sign Up
+                        </div>
+                        <p class="fullskrin__start__undertxt">
+                            Already have an account? <a href="" class="fullskrin__start__login">Log In</a>
+                        </p>
+                    </div>
+
+
                     <div class="header__info-block-left-ratings">
         
                         <div class="header__info-block-left-rating-item">
